# llm-fiction

./: .gitignore  README.md  pyproject.toml
.planning/: PROJECT.md
.streamlit/: config.toml
src/: app.py  config.py  llm_client.py
src/agents/: __init__.py  graph.py  nodes.py  schemas.py  state.py
src/memory/: __init__.py  compressor.py  context_injector.py  extractor.py  models.py  story_bible.py
src/models/: __init__.py  chapter.py  character.py  novel.py
src/storage/: json_store.py
src/ui/: __init__.py  pages.py  sidebar.py  styles.py
tests/: conftest.py  test_agents.py  test_context_injection.py  test_graph.py  test_info_extraction.py  test_list_stories.py  test_llm_client.py  test_memory_compression.py  test_memory_tiers.py  test_models.py  test_schemas.py  test_sidebar.py  test_story_bible.py  test_ui.py
